--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.5.0
+autopep8==1.6.0
 backports.zoneinfo==0.2.1
+crispy-tailwind==0.5.0
 Django==4.0.2
+django-crispy-forms==1.14.0
 Pillow==9.0.1
+pycodestyle==2.8.0
 sqlparse==0.4.2
+toml==0.10.2
