--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,7 @@ env:
   # Use ghcr.io Github Registry
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: greenify
   REPO_NAME: danbrown47/makeaton
 
 
@@ -59,6 +59,7 @@ jobs:
           # Use Docker `latest` tag convention
           [ "$VERSION" == "main" ] && VERSION=latest
           echo IMAGE_ID=$IMAGE_ID
+          
           echo VERSION=$VERSION
           sudo /usr/bin/docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           sudo /usr/bin/docker tag $IMAGE_NAME $IMAGE_ID:$VERSION$NOW$SHORT_SHA
