--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.5.0
 autopep8==1.6.0
-# backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1
 branca==0.4.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -12,6 +12,7 @@ django-crispy-forms==1.14.0
 folium==0.12.1.post1
 future==0.18.2
 geocoder==1.38.1
+gunicorn==20.1.0
 idna==3.3
 Jinja2==3.0.3
 MarkupSafe==2.1.0
